unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/OrderApi__Payment_Gateway__c.object-meta.xml
<CustomObject>
    <description>Payment gateways store configuration data for all connected Fonteva payment gateways in your organization.</description>
    <label>Payment Gateway</label>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>