unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Attempt_3DS__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Attempt_3DS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, 3D Secure will be enabled for the related payment gateway. Displayed only if a payment gateway supports
            3D Secure.</description>
    <inlineHelpText>When selected, 3DS will be enabled for the related payment gateway. Displayed only if a payment gateway supports 3DS.</inlineHelpText>
    <label>Enable 3D Secure</label>
    <type>Checkbox</type>
</CustomField>