unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__AVS_Configuration__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__AVS_Configuration__c</fullName>
    <description>AVS fields that are required when a payment is made.</description>
    <inlineHelpText>AVS fields that are required when a payment is made.</inlineHelpText>
    <label>AVS Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validate Billing Address</fullName>
            </value>
            <value>
                <fullName>Validate Postal Code</fullName>
            </value>
            <value>
                <fullName>Disable AVS</fullName>
                <default>true</default>
                <label>Disable AVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>