unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Link to the related business group.</description>
    <inlineHelpText>**Required** Link to the related business group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Payment Gateways</relationshipLabel>
    <relationshipName>Payment_Gateways</relationshipName>
    <type>Lookup</type>
</CustomField>