unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Company_Name__c</fullName>
    <description>The name of the payment gateway company.</description>
    <inlineHelpText>The name of the payment gateway company.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>