unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deposit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related GL Account to use for the Deposit Account.</description>
    <inlineHelpText>Link to related GL Account to use for the Deposit Account.</inlineHelpText>
    <label>Deposit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Payment Gateways</relationshipLabel>
    <relationshipName>Payment_Gateways</relationshipName>
    <type>Lookup</type>
</CustomField>