unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Enable_AVS__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_AVS__c</fullName>
    <description>**System Caluclated** Checked if AVS is enabled</description>
    <formula>ISPICKVAL(OrderApi__AVS_Configuration__c, &#39;Validate Billing Address&#39;)</formula>
    <inlineHelpText>**System Caluclated** Checked if AVS is enabled</inlineHelpText>
    <label>Enable AVS</label>
    <type>Checkbox</type>
</CustomField>