unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Enable_AVS_Zip_Code_Only__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_AVS_Zip_Code_Only__c</fullName>
    <description>**System Caluclated** specifies whether to verify zip code on payment or not</description>
    <formula>ISPICKVAL( OrderApi__AVS_Configuration__c , &#39;Validate Postal Code&#39;)</formula>
    <inlineHelpText>**System Caluclated** specifies whether to verify zip code on payment or not</inlineHelpText>
    <label>Enable AVS Zip Code Only</label>
    <type>Checkbox</type>
</CustomField>