unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Gateway_Specific_Fields__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Gateway_Specific_Fields__c</fullName>
    <description>Gateway specific fields to send part of every transaction.</description>
    <inlineHelpText>Gateway specific fields to send part of every transaction.</inlineHelpText>
    <label>SYSTEM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>