unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Gateway_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Gateway_Type__c</fullName>
    <description>**System Calculated** The type of gateway used by the business group for credit card and e-check processing (not supported for all customers, check with your administrator if you have any questions).</description>
    <inlineHelpText>**System Calculated** The type of gateway used by the business group for credit card and e-check processing (not supported for all customers, check with your administrator if you have any questions).</inlineHelpText>
    <label>Gateway Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>