unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Homepage__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Homepage__c</fullName>
    <description>The url for the payment gateway company website.</description>
    <inlineHelpText>The url for the payment gateway company website.</inlineHelpText>
    <label>Homepage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>