unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The gateway is enabled for payment processing.</description>
    <inlineHelpText>The gateway is enabled for payment processing.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>