unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Is_Offsite__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Offsite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** -  When a payment gateway is an offsite payment gateway.</description>
    <inlineHelpText>**System Calculated** -  When a payment gateway is an offsite payment gateway.</inlineHelpText>
    <label>Is Offsite</label>
    <type>Checkbox</type>
</CustomField>