unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Is_Test__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The gateway is a test gateway and not to be used for production environments.</description>
    <inlineHelpText>The gateway is a test gateway and not to be used for production environments.</inlineHelpText>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>