unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Post_Orders_in_Procesing__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Post_Orders_in_Procesing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the offsite payment which have not been funded yet will be posted.</description>
    <inlineHelpText>If selected, the offsite payment which have not been funded yet will be posted.</inlineHelpText>
    <label>Post Orders in Processing</label>
    <type>Checkbox</type>
</CustomField>