unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Pre_Authorization_Purchases__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Pre_Authorization_Purchases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** True if the gateway supports pre-authorization purchases.</description>
    <inlineHelpText>**System Calculated** True if the gateway supports pre-authorization purchases.</inlineHelpText>
    <label>Supports Pre-Authorization Purchases</label>
    <type>Checkbox</type>
</CustomField>