unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Require_CVV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_CVV__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this field will require the card&#39;s verification value (CVV) at the time of payment.</description>
    <inlineHelpText>Checking this field will require the card&#39;s verification value (CVV) at the time of payment.</inlineHelpText>
    <label>Require CVV</label>
    <type>Checkbox</type>
</CustomField>