unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Require_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires a valid email when executing a payment</description>
    <inlineHelpText>Requires a valid email when executing a payment</inlineHelpText>
    <label>Require Email</label>
    <type>Checkbox</type>
</CustomField>