unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Require_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires a valid phone when executing a payment</description>
    <inlineHelpText>Requires a valid phone when executing a payment</inlineHelpText>
    <label>Require Phone</label>
    <type>Checkbox</type>
</CustomField>