unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__State__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__State__c</fullName>
    <description>** System Calculated ** The current state of the payment gateway connection.</description>
    <inlineHelpText>** System Calculated ** The current state of the payment gateway connection.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>