unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supported_Countries__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supported_Countries__c</fullName>
    <description>** System Calculated ** Full list of supported countries for the Payment Gateway.</description>
    <inlineHelpText>** System Calculated ** Full list of supported countries for the Payment Gateway.</inlineHelpText>
    <label>Supported Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>