unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supported_Credit_Cards_Image__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supported_Credit_Cards_Image__c</fullName>
    <description>Image URL to show the supported credit cards for gateway.</description>
    <inlineHelpText>Image URL to show the supported credit cards for gateway.</inlineHelpText>
    <label>Supported Credit Cards Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>