unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supported_Regions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supported_Regions__c</fullName>
    <description>The payment gateway&#39;s supported geographic regions.</description>
    <inlineHelpText>The payment gateway&#39;s supported geographic regions.</inlineHelpText>
    <label>Supported Regions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>