unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_3DS_Purchase__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_3DS_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field that indicates the related payment gateway supports 3DS purchases.</description>
    <inlineHelpText>System field that indicates the related payment gateway supports 3DS purchases.</inlineHelpText>
    <label>Supports 3DS Purchase</label>
    <type>Checkbox</type>
</CustomField>