unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_Authorize__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Authorize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Gateway supports credit card authorizations.</description>
    <inlineHelpText>**System Calculated** Gateway supports credit card authorizations.</inlineHelpText>
    <label>Supports Authorize</label>
    <type>Checkbox</type>
</CustomField>