unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_Capture__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Gateway supports credit card capture.</description>
    <inlineHelpText>**System Calculated** Gateway supports credit card capture.</inlineHelpText>
    <label>Supports Capture</label>
    <type>Checkbox</type>
</CustomField>