unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_Credit__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Gateway supports credit transactions. A credit is like a void, except it actually reverses a charge instead of just canceling a charge that hasn’t yet been made.</description>
    <inlineHelpText>**System Calculated** Gateway supports credit transactions. A credit is like a void, except it actually reverses a charge instead of just canceling a charge that hasn’t yet been made.</inlineHelpText>
    <label>Supports Credit</label>
    <type>Checkbox</type>
</CustomField>