unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Gateway will be enabled for credit card payment processing.</description>
    <inlineHelpText>When checked, the Gateway will be enabled for credit card payment processing.</inlineHelpText>
    <label>Supports Credit Card</label>
    <type>Checkbox</type>
</CustomField>