unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_eCheck__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_eCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Gateway will be enabled for eCheck (EFT/ACH/Direct Debit) processing.</description>
    <inlineHelpText>When checked, the Gateway will be enabled for eCheck (EFT/ACH/Direct Debit) processing.</inlineHelpText>
    <label>Supports eCheck</label>
    <type>Checkbox</type>
</CustomField>