unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_EFT__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_EFT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked when the configured gateway supports EFT (Electronic Funds Transfer)</description>
    <inlineHelpText>**System Calculated** Checked when the configured gateway supports EFT (Electronic Funds Transfer)</inlineHelpText>
    <label>Supports EFT</label>
    <type>Checkbox</type>
</CustomField>