unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_Offsite_Authorize__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Offsite_Authorize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** - When an offsite payment gateway supports Authorize</description>
    <inlineHelpText>**System Calculated** - When an offsite payment gateway supports Authorize</inlineHelpText>
    <label>Supports Offsite Authorize</label>
    <type>Checkbox</type>
</CustomField>