unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_Verify__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The payment gateway supports a verification only transaction that does not result in any charge to the customer.</description>
    <inlineHelpText>The payment gateway supports a verification only transaction that does not result in any charge to the customer.</inlineHelpText>
    <label>Supports Verify</label>
    <type>Checkbox</type>
</CustomField>