unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Supports_Void__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Void__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Gateway supports ability to void transactions.</description>
    <inlineHelpText>**System Calculated** Gateway supports ability to void transactions.</inlineHelpText>
    <label>Supports Void</label>
    <type>Checkbox</type>
</CustomField>