unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Token__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Token__c</fullName>
    <description>**System Calculated/Override** The token used by the business group to process credit card and e-checks (not supported for all customers, check with your administrator if you have any questions).</description>
    <inlineHelpText>**System Calculated/Override** The token used by the business group to process credit card and e-checks (not supported for all customers, check with your administrator if you have any questions).</inlineHelpText>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>