unpackaged/main/default/objects/OrderApi__Payment_Gateway__c/fields/OrderApi__Use_Offsite__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Use_Offsite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the related payment gateway will use the offsite payment method. Displayed only if a payment gateway is a test gateway.</description>
    <inlineHelpText>When selected, the related payment gateway will use the offsite payment method. Displayed only if a payment gateway is a test gateway.</inlineHelpText>
    <label>Enable Offsite</label>
    <type>Checkbox</type>
</CustomField>